test/should_pass/basic_300.grg
using attrib_model_001;

rule r {
	pattern {
		:Node;
		:NINT;
		
		-:Edge->;
		<-:Edge-;

		-:EINT->;
		<-:EINT-;
		
		-->;
		<--;		
	}
	modify {}
}
