test/should_fail/annot_004.grg
rule r {
	pattern {
		--> [prio=42] <--;
	}
	modify {}
}
